--- a/package.json
+++ b/package.json
@@ -1,21 +1,28 @@
 {
   "name": "mazda-prebooking-dashboard",
   "private": true,
-  "version": "0.0.1",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview --port 4173",
+    "typecheck": "vue-tsc --noEmit",
+    "postinstall": "chmod +x node_modules/.bin/vite || true"
+  },
+  "engines": {
+    "node": ">=18"
   },
   "dependencies": {
-    "vue": "^3.4.0",
+    "vue": "^3.4.21",
+    "dayjs": "^1.11.11",
     "echarts": "^5.5.0",
-    "xlsx": "^0.18.5",
-    "dayjs": "^1.11.11"
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "vite": "^5.2.0",
-    "@vitejs/plugin-vue": "^5.0.0"
+    "@vitejs/plugin-vue": "^5.0.4",
+    "typescript": "^5.4.5",
+    "vite": "^5.0.8",
+    "vue-tsc": "^2.0.19"
   }
 }
